# erasgpt

./: Launch_Eras_Zombie_Invasion.bat  Launch_Eras_Zombie_Invasion.command  Launch_Eras_Zombie_Invasion.ps1  README.md  launch_eras_zombie_invasion.py  pyproject.toml
.github/workflows/: README.md
assets/: barracks.ppm  base.ppm  gold_node.ppm  lumber_node.ppm  soldier.ppm  tower.ppm  worker.ppm  zombie.ppm
docs/: game_design.md
src/eras_zombie_invasion/: __init__.py  __main__.py  cli.py  data.py  game.py  pygame_app.py
